// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button Matches Loading Snapshot 1`] = `
<button
  className="primaryBtn"
  data-testid="button"
  onClick={[Function]}
  type="button"
>
  <span
    className="loader"
    data-testid="buttonLoader"
  />
</button>
`;

exports[`Button Button Matches Snapshot 1`] = `
<button
  className="primaryBtn"
  data-testid="button"
  onClick={[Function]}
  type="button"
>
  Press Me!
</button>
`;
